--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#0069ba</color>
     <color name="colorPrimaryDark">#0069ba</color>
     <color name="colorAccent">#0069ba</color>
+    <color name="secondAccent">#004bff</color>
 </resources>
