--- a/app/src/main/res/drawable/actionbar_bg.xml
+++ b/app/src/main/res/drawable/actionbar_bg.xml
@@ -3,8 +3,8 @@
 
 <gradient
     android:angle="90"
-    android:startColor="#00afff"
+    android:endColor="#00afff"
     android:centerColor="#006fff"
-    android:endColor="#004bff"
+    android:startColor="#004bff"
     android:type="linear"/>
 </shape>
