--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,6 +9,8 @@
     tools:showIn="@layout/app_bar_main">
 
     <TextView
+        android:textColor="#000000"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Welcome!"
