--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#0069ba</color>
     <color name="colorAccent">#0069ba</color>
     <color name="secondAccent">#004bff</color>
+    <color name="thirdAccent">#00afff</color>
 </resources>
