Revert "Fix the colours the easy way"
This reverts commit 0dfe9f867183a4505f3460187f964ba52c3fe7d1.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#ffffff</color>
+    <color name="colorPrimary">#0069ba</color>
+    <color name="colorPrimaryDark">#0069ba</color>
+    <color name="colorAccent">#0069ba</color>
     <color name="secondAccent">#004bff</color>
     <color name="black">#000000</color>
+    <color name="background_material_light">#000000</color>
 
 </resources>
