--- a/app/src/main/res/layout/contacts_main.xml
+++ b/app/src/main/res/layout/contacts_main.xml
@@ -6,5 +6,6 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/contacts" />
+        android:text="@string/contacts"
+        android:background="@color/background" />
 </android.support.constraint.ConstraintLayout>
