--- a/app/src/main/res/layout/downloads_main.xml
+++ b/app/src/main/res/layout/downloads_main.xml
@@ -6,5 +6,6 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/downloads" />
+        android:text="@string/downloads"
+        android:background="@color/background" />
 </android.support.constraint.ConstraintLayout>
