--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="secondAccent">#004bff</color>
     <color name="black">#000000</color>
     <color name="background_material_light">#000000</color>
+    <color name="background">#ffffff</color>
 
 </resources>
