--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    android:fitsSystemWindows="true">
+<android.support.design.widget.CoordinatorLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
@@ -20,20 +22,36 @@
             android:background="@drawable/actionbar_bg"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+        <ViewFlipper
+            android:id="@+id/main_vf"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <include layout="@layout/info_main" />
+            <include layout="@layout/members_main" />
+            <include layout="@layout/projects_main" />
+            <include layout="@layout/roms_main" />
+            <include layout="@layout/downloads_main" />
+            <include layout="@layout/wallpapers_main" />
+            <include layout="@layout/contacts_main" />
+        </ViewFlipper>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_dialog_email" />
+
+</FrameLayout>
+
     </android.support.design.widget.AppBarLayout>
 
-    <ViewFlipper
-        android:id="@+id/main_vf"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <include layout="@layout/info_main" />
-        <include layout="@layout/members_main" />
-        <include layout="@layout/projects_main" />
-        <include layout="@layout/roms_main" />
-        <include layout="@layout/downloads_main" />
-        <include layout="@layout/wallpapers_main" />
-        <include layout="@layout/contacts_main" />
-    </ViewFlipper>
+</android.support.design.widget.CoordinatorLayout>
+
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -43,13 +61,5 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </android.support.v4.widget.DrawerLayout>
