--- a/app/src/main/res/layout/desc_yunus.xml
+++ b/app/src/main/res/layout/desc_yunus.xml
@@ -7,11 +7,11 @@
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="Developer"/>
+        android:text="@string/developer"/>
     <TextView
         android:layout_width="400sp"
         android:layout_height="50sp"
         android:text="@string/yunus_desc"
-        android:textColor="#adadadad"
+        android:textColor="@color/background_text"
         android:textStyle="italic"/>
 </LinearLayout>
