--- a/app/src/main/res/layout/members_main.xml
+++ b/app/src/main/res/layout/members_main.xml
@@ -56,26 +56,25 @@
             android:id="@+id/media_image"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_marginTop="19dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="18dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_yunus" />
 
         <Button
-            style="@style/Widget.AppCompat.Button.Borderless"
             android:id="@+id/action_button_1"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:minWidth="0dp"
+            android:layout_marginTop="20dp"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
-            android:textColor="#DE000000"
             android:text="@string/info"
-            app:layout_constraintTop_toBottomOf="@+id/media_image"
+            android:textColor="@color/design_default_color_primary"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/primary_text" />
 
     </android.support.constraint.ConstraintLayout>
 
