gayness is like cancer,sometimes it persists

--- a/app/src/main/res/layout/members_main.xml
+++ b/app/src/main/res/layout/members_main.xml
@@ -38,8 +38,9 @@
             app:layout_constraintEnd_toStartOf="@+id/media_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
+        <!-- because why not lol!-->
         <TextView
+            android:layout_marginTop="2dp"
             android:id="@+id/sub_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
