--- a/app/src/main/res/layout/desc_nano.xml
+++ b/app/src/main/res/layout/desc_nano.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:background="@color/background">
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
